--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Code Challenge 1</title>
-        <meta charset="UTF-8">
-        <!-- <link href="css/style.css" rel="stylesheet"> -->
-        <script src="script.js"></script>
-    </head>
-    <body>
-    
-    </body>
+
+<head>
+    <title>Code Challenge 1</title>
+    <meta charset="UTF-8">
+    <link href="style.css" rel="stylesheet">
+    <script src ="jquery-3.2.1.js"></script>
+    <script src="script.js"></script>
+</head>
+
+<body>
+    <div>
+    </div>
+
+</body>
+
 </html>
