Delete function working.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-<button>Generate</button>
-
+<button class="firstButton">Generate</button>
+<div id="colorDivContainer"></div>
 </body>
 
 </html>
